--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ path = "src/bin/main.rs"
 
 [dependencies]
 clap = { version = "4.0.32", features = ["derive"] }
+colored = "2.0.0"
 rand_chacha = "0.3.1"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
